@@ -1,9 +1,12 @@
 package com.zeyuli.service.impl;
 
-import com.zeyuli.pojo.bo.Location;
-import com.zeyuli.pojo.bo.POI;
-import com.zeyuli.pojo.bo.Point;
-import com.zeyuli.pojo.bo.Route;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.zeyuli.pojo.bo.*;
+import com.zeyuli.pojo.vo.GaodeAddress;
+import com.zeyuli.pojo.vo.Geocodes;
+import com.zeyuli.pojo.vo.POIAddress;
+import com.zeyuli.pojo.vo.Pois;
 import com.zeyuli.service.MapService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -12,6 +15,7 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -38,23 +42,58 @@ public class AmapMapServiceImpl implements MapService {
         return KEY;
     }
 
+    /**
+     * 高德返回结果：
+     * <pre>
+     *     {@code
+     *     {
+     *   "status" : "1",
+     *   "info" : "OK",
+     *   "infocode" : "10000",
+     *   "count" : "1",
+     *   "geocodes" : [ {
+     *     "formatted_address" : "江苏省南京市",
+     *     "country" : "中国",
+     *     "province" : "江苏省",
+     *     "citycode" : "025",
+     *     "city" : "南京市",
+     *     "district" : [ ],
+     *     "township" : [ ],
+     *     "neighborhood" : {
+     *       "name" : [ ],
+     *       "type" : [ ]
+     *     },
+     *     "building" : {
+     *       "name" : [ ],
+     *       "type" : [ ]
+     *     },
+     *     "adcode" : "320100",
+     *     "street" : [ ],
+     *     "number" : [ ],
+     *     "location" : "118.796624,32.059344",
+     *     "level" : "市"
+     *   } ]
+     * }}
+     * </pre>
+     *
+     * @author : 李泽聿
+     * @since : 2025-12-08 08:20
+     * @param location 地址
+     * @return : com.zeyuli.pojo.bo.Point
+     */
     @Override
     public Point getMapCenter(String location) {
         try {
             // 地理编码API：将地址转换为坐标
-            String url = BASE_URL + "/geocode/geo?address=" + URLEncoder.encode(location, "UTF-8") + "&key=" + getKey();
+            String url = BASE_URL + "/geocode/geo?address=" + URLEncoder.encode(location, StandardCharsets.UTF_8) + "&key=" + getKey();
             String result = httpGet(url);
-            // 解析JSON响应，这里简化处理，实际需要使用JSON解析库
             if (result.contains("location")) {
-                String locationStr = result.substring(result.indexOf("location") + 10);
-                locationStr = locationStr.substring(0, locationStr.indexOf(","));
-                String[] coords = locationStr.split(",");
-                if (coords.length == 2) {
-                    Point point = new Point();
-                    point.setLng(Double.parseDouble(coords[0]));
-                    point.setLat(Double.parseDouble(coords[1]));
-                    return point;
-                }
+                ObjectMapper mapper =new ObjectMapper();
+                GaodeAddress gaodeAddress = mapper.readValue(result, GaodeAddress.class);
+                // 获取location
+                Geocodes geocodes = gaodeAddress.getGeocodes().getFirst();
+                // 解析location
+                return geocodes.analyzeLatAndLon();
             }
         } catch (Exception e) {
             log.error("获取地图中心点失败: {}", e.getMessage());
@@ -62,53 +101,151 @@ public class AmapMapServiceImpl implements MapService {
         return null;
     }
 
+    public String getCityCode(String cityName) {
+        try {
+            // 城市编码API：将城市名称转换为城市编码
+            String url = BASE_URL + "/geocode/geo?address=" + URLEncoder.encode(cityName, StandardCharsets.UTF_8) + "&key=" + getKey();
+            String result = httpGet(url);
+            if (result.contains("location")) {
+                ObjectMapper mapper =new ObjectMapper();
+                GaodeAddress gaodeAddress = mapper.readValue(result, GaodeAddress.class);
+                // 获取location
+                Geocodes geocodes = gaodeAddress.getGeocodes().getFirst();
+                // 解析location
+                return geocodes.getCitycode();
+            }
+        } catch (Exception e) {
+            log.error("获取城市编码失败: {}", e.getMessage());
+        }
+        return null;
+    }
+
+    /**
+     *
+     * @author : 李泽聿
+     * @since : 2025-12-08 08:56
+     * @param query 搜索关键词
+     * @param region 区域
+     * @return : java.util.List<com.zeyuli.pojo.bo.Location>
+     */
     @Override
     public List<Location> searchLocations(String query, String region) {
         List<Location> locations = new ArrayList<>();
         try {
             // 搜索POI
-            String url = BASE_URL + "/place/text?keywords=" + URLEncoder.encode(query, "UTF-8") + "&region=" + 
-                         URLEncoder.encode(region, "UTF-8") + "&key=" + getKey();
+            String url = BASE_URL + "/place/text?keywords=" + URLEncoder.encode(query, StandardCharsets.UTF_8) + "&region=" +
+                         URLEncoder.encode(region, StandardCharsets.UTF_8) + "&key=" + getKey();
             String result = httpGet(url);
-            // 解析JSON响应，简化处理
-            log.info("搜索位置结果: {}", result);
-            // 实际实现需要解析JSON并构建Location对象
+            ObjectMapper mapper = new ObjectMapper();
+            POIAddress poiAddress = mapper.readValue(result, POIAddress.class);
+
+            String cityCode = getCityCode(region);
+            List<Pois> pois = poiAddress.getPois();
+            for (Pois poi : pois) {
+                Location location = new Location();
+                // 解析名称
+                location.setName(poi.getName());
+                // 分别设置经纬度
+                String[] latAndLon = poi.getLocation().split(",");
+                location.setLat(Double.parseDouble(latAndLon[0]));
+                location.setLng(Double.parseDouble(latAndLon[1]));
+                // 设置地址
+                location.setAddress(poi.getAddress());
+                // 设置类型
+                location.setType(poi.getType());
+                // 设置城市编码
+                location.setCityCode(cityCode);
+                locations.add(location);
+            }
         } catch (Exception e) {
             log.error("搜索位置失败: {}", e.getMessage());
         }
         return locations;
     }
 
+    /**
+     * 规划路线
+     *
+     * @author : 李泽聿
+     * @since : 2025-12-08 09:51
+     * @param origin 起点
+     * @param destination 终点
+     * @param mode 交通方式
+     * @return : com.zeyuli.pojo.bo.Route
+     */
     @Override
+    // todo 待测试
     public Route getRoute(String origin, String destination, String mode) {
         Route route = new Route();
         try {
-            // 根据交通方式选择不同的API
-            String type = "driving"; // 默认驾车
-            if (mode.equalsIgnoreCase("walking")) {
-                type = "walking";
-            } else if (mode.equalsIgnoreCase("transit")) {
-                type = "transit/integrated";
-            } else if (mode.equalsIgnoreCase("bicycling")) {
-                type = "bicycling";
-            } else if (mode.equalsIgnoreCase("taxi")) {
-                type = "driving"; // 出租车使用驾车路线，但费用计算不同
+            // 1. 构造 URL
+            String type = switch (mode.toLowerCase()) {
+                case "walking" -> "walking";
+                case "transit" -> "transit/integrated";
+                case "bicycling" -> "bicycling";
+                default -> "driving";
+            };
+            String url = DIRECTION_URL + "/" + type +
+                    "?origin=" + origin + "&destination=" + destination + "&key=" + getKey();
+            String json = httpGet(url);
+
+            // 2. 解析
+            ObjectMapper mapper = new ObjectMapper();
+            JsonNode root = mapper.readTree(json);
+            if (!"1".equals(root.get("status").asText())) {
+                log.warn("路径规划失败：{}", root.get("info").asText());
+                return route;
             }
 
-            String url = DIRECTION_URL + "/" + type + "?origin=" + origin + "&destination=" + destination + "&key=" + getKey();
-            String result = httpGet(url);
-            
-            // 解析响应，设置路线信息
+            // 3. 取第一条路径
+            JsonNode path = root.at("/route/paths/0");
+            if (path == null || path.isMissingNode()) return route;
+
+            double distance = path.get("distance").asDouble();          // 米
+            double duration = path.get("duration").asDouble();          // 秒
+            String polyline = path.get("polyline").asText();            // 轨迹
+            String startName = path.at("/origin/name").asText("起点");
+            String endName = path.at("/destination/name").asText("终点");
+
+            // 4. 填充 Route
             route.setMode(mode);
-            route.setDistance(5000); // 示例数据
-            route.setDuration(3600); // 示例数据
-            route.setEstimatedCost(calculateCost(mode, 5000, 3600)); // 计算预估费用
-            route.setStartName("起点"); // 示例数据
-            route.setEndName("终点"); // 示例数据
-            
-            // 实际实现需要解析JSON并构建完整的Route对象
+            route.setDistance(distance);
+            route.setDuration(duration);
+            route.setPolyline(polyline);
+            route.setStartName(startName);
+            route.setEndName(endName);
+            route.setEstimatedCost(calculateCost(mode, distance, duration));
+
+            // 5. 解析 steps
+            List<RouteStep> steps = new ArrayList<>();
+            if (type.equals("walking") || type.equals("bicycling")) {
+                // 步行/骑行 steps 是已拼好的字符串，按“；”切
+                String stepStr = path.get("steps").asText("");
+                String[] arr = stepStr.split("；");
+                for (String s : arr) {
+                    RouteStep step = new RouteStep();
+                    step.setInstruction(s);
+                    step.setMode(mode);
+                    steps.add(step);
+                }
+            } else {
+                // driving/transit 步骤较多，可再按 /steps 数组细解析，这里先简化
+                JsonNode stepArr = path.get("steps");
+                if (stepArr != null && stepArr.isArray()) {
+                    for (JsonNode s : stepArr) {
+                        RouteStep step = new RouteStep();
+                        step.setInstruction(s.get("instruction").asText(""));
+                        step.setDistance(s.get("distance").asDouble(0));
+                        step.setDuration(s.get("duration").asDouble(0));
+                        step.setMode(mode);
+                        steps.add(step);
+                    }
+                }
+            }
+            route.setSteps(steps);
+
         } catch (Exception e) {
-            log.error("获取路线失败: {}", e.getMessage());
+            log.error("获取路线失败", e);
         }
         return route;
     }
